--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,18 +34,18 @@
     "@types/redux-actions": "2.6.1",
     "@types/webpack": "4.4.34",
     "@types/webpack-env": "1.13.9",
-    "babel-core": "^4.7.16",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
+    "css-loader": "^6.8.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "file-loader": "^4.0.0",
-    "html-loader": "^1.0.0-alpha.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^4.0.0-beta.4",
     "identity-obj-proxy": "^3.0.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "postcss": "^7.0.17",
+    "postcss": "^8.4.31",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -62,10 +62,10 @@
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "url-loader": "^2.0.1",
-    "webpack": "^4.35.3",
+    "webpack": "^5.89.0",
     "webpack-cleanup-plugin": "^0.3.1",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -82,7 +82,7 @@
     "connected-react-router": "^4.5.0",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
-    "jest": "^24.8.0",
+    "jest": "^29.7.0",
     "moment": "^2.24.0",
     "oauth-sign": "^0.9.0",
     "raf": "^3.4.1",
