--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,9 +91,9 @@ jobs:
   #   docker:
   #     # Docker image here
   #   steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+  # Checkout code from git
+  # Restore from cache
+  # Your job code here
 
 #   scan-frontend:
 #     docker:
@@ -281,8 +281,8 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
+      - test-frontend:
+          requires: [build-frontend]
       # - test-backend:
       #     requires: [build-backend]
       # - scan-backend:
