--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,18 +288,14 @@ jobs:
 
   deploy-frontend:
     docker:
-      # Docker image here that supports AWS CLI
-      - image: amazon/aws-cli
+      - image: cimg/node:13.8.0
     steps:
-      # Checkout code from git
-      - checkout
       - run:
-          name: Install dependencies
+          name: Install AWS CLI
           command: |
-            yum install -y tar gzip curl
-            curl -sL https://rpm.nodesource.com/setup_16.x | bash -
-            yum update -y
-            yum install -y nodejs
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
 
       - run:
           name: Get backend url
@@ -420,12 +416,6 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - run:
-          name: Save Old Workflow ID to kvdb.io
-          command: |
-            export OldWorkflowID=$(aws --region us-east-1 cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            echo "Old Wokflow ID: $OldWorkflowID"
-            curl https://kvdb.io/${KVDB_BUCKET_ID}/old_workflow_id -d "${OldWorkflowID}"
       - run:
           name: Update cloudfront distribution
           command: |
