--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,6 +207,7 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             # Your code here
+            echo "${CIRCLE_WORKFLOW_ID:0:7}"
             BACKEND_PUBLIC_IP=$(aws --region us-east-1 ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicDnsName' --output text)
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
@@ -217,7 +218,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
 
       # Here's where you will add some code to rollback on failure
-      - destroy-environment
+      # - destroy-environment
 
   configure-infrastructure:
     docker:
@@ -276,15 +277,9 @@ jobs:
       - run:
           name: Send migration status to kvdb.io
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-                  # If you are using memstash.io, generate the token "7933fe63-4687-4fa1-8426-aa25aa1730ec" on the website
-              curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
-              # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
-              curl https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi
+           
       - destroy-environment
-      - revert-migrations
+      # - revert-migrations
 
   deploy-frontend:
     docker:
@@ -301,6 +296,11 @@ jobs:
           name: Get backend url
           command: |
             # your code here
+
+            echo "${CIRCLE_WORKFLOW_ID:0:7}"
+
+
+
             export BACKEND_PUBLIC_IP=$(aws --region us-east-1 ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicDnsName' --output text)
             export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
             echo "${API_URL}"
@@ -322,7 +322,7 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure
-      - revert-migrations
+      # - revert-migrations
       - destroy-environment
 
   deploy-backend:
@@ -369,7 +369,7 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml -v
       # Here's where you will add some code to rollback on failure
-      - revert-migrations
+      # - revert-migrations
       - destroy-environment
 
   smoke-test:
@@ -408,7 +408,7 @@ jobs:
             else
               exit 1
             fi
-      - destroy-environment
+      # - destroy-environment
       - revert-migrations
 
   cloudfront-update:
@@ -425,7 +425,7 @@ jobs:
                     --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
                     --region us-east-1 \
                     --tags project=udapeople
-      - revert-migrations
+      # - revert-migrations
       - destroy-environment
 
   cleanup:
